# geomlib

geomlib/: README.md  pyproject.toml
geomlib/geomlib/: __init__.py  registry.py  shapes.py  utils.py
geomlib/tests/: test_geomlib.py
